// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="sc-AxirZ bvOtTg transition-colors duration-200 text-theme-primary font-semibold cursor-pointer inline-flex items-center hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="/test"
  >
    Test
  </a>
</DocumentFragment>
`;

exports[`Link should render external 1`] = `
<DocumentFragment>
  <a
    class="sc-AxirZ fYobRB transition-colors duration-200 text-theme-primary font-semibold cursor-pointer inline-flex items-center hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="https://ark.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    ARK.io
    <div
      class="sc-AxjAm cpczEI flex-shrink-0 ml-2 text-sm"
      data-testid="Link__external"
      height="1em"
      width="1em"
    >
      <svg>
        redirect.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="sc-AxirZ fYobRB transition-colors duration-200 text-theme-primary font-semibold cursor-pointer inline-flex items-center hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="https://ark.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="sc-AxjAm cpczEI flex-shrink-0 "
      data-testid="Link__external"
      height="1em"
      width="1em"
    >
      <svg>
        redirect.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
